Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 3.1.1, Qt Creator 3.2.0-beta1
-
None
-
Windows 8.1 64 Bit
Qt stable branch
-
6aeb1f99b29f12632a9d70efd9939d6bbf743ea6
Description
I have currently 6 open projects and whenever I try to remove a project qt creator crashes.
Backtrace attached.
Attachments
For Gerrit Dashboard: QTCREATORBUG-12242 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
85375,2 | VcsBase: Do not crash when no project is selected | 3.1 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |