src/plugins/vcsbase/vcsplugin.cpp
@@ -147,8 +147,13 @@ void VcsPlugin::updateVariable(const QByteArray &variable)
 
     ProjectExplorer::Project *project = ProjectExplorer::ProjectExplorerPlugin::currentProject();
     if (cachedProject != project) {
-        cachedVc = Core::VcsManager::findVersionControlForDirectory(project->projectDirectory(),
-                                                                    &cachedTopLevel);
+        if (project) {
+            cachedVc = Core::VcsManager::findVersionControlForDirectory(project->projectDirectory(),
+                                                                        &cachedTopLevel);
+        } else {
+            cachedVc = 0;
+            cachedTopLevel.clear();
+        }
         cachedProject = project;
     }
 
